--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "type-check": "vue-tsc --noEmit -p tsconfig.app.json --composite false"
   },
   "dependencies": {
+    "bootstrap": "^5.3.2",
     "pinia": "^2.1.7",
-    "vue": "^3.3.4",
+    "vue": "^3.3.8",
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
